--- a/src/app/course/courses/courses.component.html
+++ b/src/app/course/courses/courses.component.html
@@ -22,9 +22,10 @@
               <span class="bullet">&#8226;</span>
               {{ course.courseDescription }}
             </p>
-            <p class="teacher">
+            <p class="">
               <span class="bullet">&#8226;</span>
-              Instructor Address: {{ course.teacherEmail }}
+              Instructor Address:
+              <span class="teacher">{{ course.teacherEmail }}</span>
             </p>
           </div>
           <div
