--- a/src/app/course/courses/courses.component.css
+++ b/src/app/course/courses/courses.component.css
@@ -38,6 +38,10 @@
     font-weight: 700;
     font-size: 1.65em;
 }
+.btn:hover{
+  background-color: maroon;
+  color: white;
+}
 
 .card-title .course-name {
     color: #000;
