exam to be shown to the student

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -8,9 +8,8 @@ a{
     text-transform: capitalize;
 }
 li a:hover {
-    background-color: lightgrey;
-    border-radius: 50px;
-    color: maroon;
+    color: wheat;
+    transform: translateY(-5px);
 }
 ul{
     margin-right: 50px;
