--- a/src/app/course/course/course.component.html
+++ b/src/app/course/course/course.component.html
@@ -289,7 +289,7 @@
         </div>
         <div class="row">
           <div class="col-12 mb-3" *ngFor="let question of examQuestions">
-            <div class="card">
+            <div class="card" *ngIf="question.questionType == 'True_False'">
               <div class="card-body">
                 <div class="d-flex justify-content-between p-md-1">
                   <div class="d-flex flex-column">
