exam questions grouped and outputed

--- a/src/app/course/course/course.component.css
+++ b/src/app/course/course/course.component.css
@@ -138,3 +138,7 @@ margin-right: 5px;
     background-color: maroon;
         color: white;
 }
+.next-btn{
+    margin-left: auto;
+    margin-right: 10px;
+}
