--- a/src/app/course/exam/exam.component.html
+++ b/src/app/course/exam/exam.component.html
@@ -112,12 +112,13 @@
               fill.value
             )
           "
+          style="width: 70%"
         ></textarea>
       </div>
     </ng-container>
   </div>
   <div class="d-flex justify-content-end m-3">
-    <button type="button" class="btn btn-primary" (click)="nextPage()">
+    <button type="button" class="btn btn-primary" (click)="onSubmit()">
       submit
     </button>
   </div>
