--- a/src/app/course/courses/courses.component.html
+++ b/src/app/course/courses/courses.component.html
@@ -1,6 +1,11 @@
 <app-navbar></app-navbar>
 <div class="content mt-4">
-  <div class="container">
+  <div class="container border">
+    <div class="h3 text-center">All Courses</div>
+    <div class="h5 text-center">
+      courses you take this semester are found here
+    </div>
+    <hr />
     <div class="row">
       <div
         *ngFor="let course of courses"
