--- a/src/app/course/video/video.component.html
+++ b/src/app/course/video/video.component.html
@@ -1,8 +1,9 @@
-<div>
+<div class="video">
   <iframe
     width="100%"
     height="500"
     [src]="url"
+    [frameBorder]="0"
     alt="video"
     allowfullscreen
   ></iframe>
