--- a/src/app/popup/popup.component.css
+++ b/src/app/popup/popup.component.css
@@ -9,7 +9,8 @@
     height: fit-content;
     border-radius: 5px;
     padding: 20px;
-    background-color: #efedde;
+    background-color: lightgray;
+    color: black;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 .buttons{
