--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,11 @@
 
 /* You can add global styles to this file, and also import other style files */
-body {
-    background: rgb(252, 236, 236);   
-}
+/* body {
+    background-image: url("assets/images/background-image.png");  
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+} */
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
