--- a/src/app/course/course/course.component.css
+++ b/src/app/course/course/course.component.css
@@ -57,6 +57,7 @@
     padding: 0px;
     background-color: white;
     margin-right: auto;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.19);
 }
 .hide-button{
         width: 130px;
@@ -140,10 +141,6 @@ margin-right: 5px;
 .card-body{
     overflow: auto;
 }
-.btn:hover{
-    background-color: maroon;
-        color: white;
-}
 .next-btn{
     margin-left: auto;
     margin-right: 10px;
@@ -151,4 +148,18 @@ margin-right: 5px;
 .youtube{
     display: flex;
     flex-direction: column;
+}
+.uploadButton{
+    display: inline;
+    margin-left: auto;
+    margin-right: 5px;
+    border: 1px red;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 50px;
+    overflow: hidden;
+}
+.uploadButton:hover{
+    background-color: #1DA1F2;
+        color: white;
 }
