--- a/src/app/course/courses/courses.component.html
+++ b/src/app/course/courses/courses.component.html
@@ -39,7 +39,7 @@
           <div
             class="card-read-more d-flex justify-content-center align-items-center"
           >
-            <button class="btn btn-block" (click)="onSelectCourse(course.id)">
+            <button class="btn btn-sm" (click)="onSelectCourse(course.id)">
               see details
             </button>
           </div>
