--- a/src/app/course/exam/exam.component.html
+++ b/src/app/course/exam/exam.component.html
@@ -6,7 +6,7 @@
     Full screen
   </button>
   <div class="container" id="fullscreen">
-    <div class="timer col-4">
+    <div class="timer col-md-4 col-12">
       <div class="h5 text-center">Time remaining</div>
       <table class="table">
         <thead class="thead">
