--- a/src/app/course/course/course.component.css
+++ b/src/app/course/course/course.component.css
@@ -1,3 +1,5 @@
+.full-container{
+}
 .navbar{
     padding: 0px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.19);
@@ -150,16 +152,16 @@ margin-right: 5px;
     flex-direction: column;
 }
 .uploadButton{
-    display: inline;
-    margin-left: auto;
-    margin-right: 5px;
-    border: 1px red;
     margin-top: auto;
     margin-bottom: auto;
-    height: 50px;
-    overflow: hidden;
 }
-.uploadButton:hover{
-    background-color: #1DA1F2;
-        color: white;
+.uploadButton button{
+    border: 1px solid;
+    margin-bottom: 5px;
+        background-color: #1DA1F2;
+            color: white;
+}
+.uploadButton button:hover{
+    background-color: white;
+        color: #1DA1F2;
 }
