--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -55,7 +55,7 @@
 </div>
 <div class="main-content">
   <div class="col-lg-6 col-sm-12">
-    <h1>Teach from wherever, whenever!</h1>
+    <h1>Learn from wherever, whenever!</h1>
     <h6>Welcome to AAU's online teaching platform.</h6>
     <h6>
       You can browse through the available courses and upload course materials.
@@ -63,7 +63,7 @@
     <h6>Education awaits!</h6>
   </div>
   <div class="col-lg-6 teach d-none d-lg-flex">
-    <img src="../../assets/images/teach.jpg" alt="TEACH" />
+    <img src="../../assets/images/learn.jpg" alt="TEACH" />
   </div>
 </div>
 <div class="cards">
