--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -56,9 +56,10 @@
 <div class="main-content">
   <div class="col-lg-6 col-sm-12">
     <h1>Learn from wherever, whenever!</h1>
-    <h6>Welcome to AAU's online teaching platform.</h6>
+    <h6>Welcome to AAU's online learning platform.</h6>
     <h6>
-      You can browse through the available courses and upload course materials.
+      You can browse through the available courses and download course
+      materials.
     </h6>
     <h6>Education awaits!</h6>
   </div>
